@@ -9,6 +9,12 @@ User visible changes
 
 * FFI:UINT64 and FFI:SINT64 are now compatible with C's long long type.
 
+* Stack overflow detection and recovery finally works fine on Unix.
+  Libsigsegv is required for this, on all platforms (including MS-Windows).
+  CLISP should neither exit nor crash under infinite recursion.
+  If your distribution has CLISP compiled without libsigsegv, report
+  the missing feature to its maintainer.
+
 * It is now possible to specify the default method-combination of a generic
   function, to be used when the DEFGENERIC form does not specify the
   :METHOD-COMBINATION explicitly, through a default initarg specification
@@ -18,6 +24,9 @@ User visible changes
   + SOCKET:SOCKET-SERVER :INTERFACE now behaves as documented.
   + EXT:READ-BYTE-NO-HANG and SOCKET:SOCKET-STATUS used to hang on
     buffered binary sockets.
+  + Allow DESTRUCTURING-BIND (a . b) with circular and dotted lists.
+  + ADJUST-ARRAY of zero length adjustable string now works.
+  + TIME now reports correct results when the heap grows over 4GB.
 
 
 2.38 (2006-01-24)
@@ -962,7 +971,7 @@ User visible changes
   Kaz Kylheku <kaz@ashi.footprints.net>.
 
 * New function EXT:MAKE-XTERM-IO-STREAM creates an input-output stream
-  that uses a separate X terminal.  UNIX platforms only.
+  that uses a separate X terminal.  Unix platforms only.
   See <http://clisp.cons.org/impnotes.html#separate-io> for details.
 
 * Fixed a bug in PEEK-CHAR with non-NIL peek-type on ECHO-STREAMS.
